--- a/employees/templates/Employee_details.html
+++ b/employees/templates/Employee_details.html
@@ -73,7 +73,7 @@
             </div>
         </div>
     </div>
-
+<!-- remove this -->
 <div class="project" id="project-details">
     <div style="margin-top: 20px;"><h1><B><center>{{emp.Name}} Projects</center></B></h1></div>
     <div style="margin-left: 50px;margin-right: 50px;"class="row row-cols-1 row-cols-md-4 g-4">
@@ -132,7 +132,7 @@
    {% endfor %}
 
    {% else %}
-                   <center><h1>No Employees are available.</h1></center>
+                   <center><h1>Employee not Found.</h1></center>
                {% endif %}
 
 </body>
