--- a/student/templates/marks.html
+++ b/student/templates/marks.html
@@ -56,7 +56,7 @@
             {% endfor %}
         </table>
         {% else %}
-            <p>No Records are available.</p>
+            <p>No data of this student</p>
         {% endif %}
         
         </div>
