--- a/student/templates/student.html
+++ b/student/templates/student.html
@@ -57,7 +57,7 @@
             {% endfor %}
         </table>
         {% else %}
-            <p>No Records are available.</p>
+            <p>Student Not found.</p>
         {% endif %}
         
         </div>
