--- a/student/templates/result.html
+++ b/student/templates/result.html
@@ -1,4 +1,5 @@
 {% load static%}
+
 <html>
   <head>
     <link
@@ -25,10 +26,11 @@
 
     <link rel="stylesheet" href="{% static 'css/result.css' %}" />
   </head>
+
   <body>
     
+{% if no_records is False%}
 
-  
         <div class="container mt-4" >
             <h1 class="text-center" style="padding-top: 0%; width: 100% ;">
                 Student Scorecard
@@ -55,6 +57,8 @@
               </div>
       
               <div class="col-md-2" >
+        
+           
            
                 <a href="{% url 'student_form_view' %}" class="btn btn-secondary" >Back</a>
             </div>
@@ -62,7 +66,7 @@
             </div>
         </div>
     
-  
+       
     <div>
       <table class="table">
         <thead class="thead-dark">
@@ -73,12 +77,14 @@
             <th scope="col">Marks</th>
           </tr>
         </thead>
-
+       
         <tbody>
+            
           <tr>
-            {% for d in details%}
+            
 
-            <td>{{sem}}</td>
+            <td rowspan="2">{{sem}}</td>
+            {% for d in details%}
             <td>{{d.Sub_Id.Sub_Id}}</td>
             <td>{{d.Sub_Id.Sub_name}}</td>
             <td>{{d.Marks}}</td>
@@ -89,10 +95,14 @@
             <td colspan="5" style="background-color: greenyellow;">Total percentage of Sem {{sem}} is {{percent}}%</td>
           </tr>
           {% endfor %}
+          
         </tbody>
       </table>
     </div>
- 
-  </body>
 
+  </body>
+  {% else %}
+  <h1>No records </h1>
+ 
+ {% endif %}
 </html>
